# arbitrage-detector

./: ProjectNotes.md  README.md
Playground/Thread/: Notes.md  makefile  miniarbtirage  miniarbtirage.cpp
Playground/Websocket/: Notes.md  socket.cpp
Playground/Websocket/BoostTest/: CMakeLists.txt  client.cpp
Playground/Websocket/Demo/: helloworld.cpp  threadedhw.cpp
Project/: CMakeLists.txt  LatencyTest.cpp  TestingNotes.md  main.cpp  multi  multithreadmain.cpp  single  test
Project/MPSC/: # Single Threaded Design.txt  MPSC.cpp  MPSC.hpp  Notes.md  Single Threaded Design.md  ToDo.md
Project/MarketData/: MarketData.hpp
Project/OrderBook/: ExchangeQuote.hpp  OrderBook.cpp  OrderBook.hpp
Project/Testing/: TestingNotes.md  bench  benchmark  benchmark.cpp  multithreadmain.cpp  singlethreadmain.cpp
